2008-02-18 [colin]	3.3.0cvs16

	* src/imap.c
		Unset folder's session before creating a
		new one
	* src/main.c
	* src/prefs_common.c
	* src/prefs_common.h
	* manual/advanced.xml
		Add an hidden use_networkmanager pref, to
		disable NetworkManager handling. Also,
		consider UNKNOWN state to be CONNECTED.

2008-02-18 [wwp]	3.3.0cvs15

	* src/matcher.c
		Fix Engrish and make 'not' more visible in filtering debug logs.

2008-02-15 [colin]	3.3.0cvs14

	* src/matcher.c
		Revert cvs10 for now, it breaks the feature

2008-02-15 [colin]	3.3.0cvs13

	* src/main.c
		Always focus folder tree at startup
	* src/compose.c
		Fix bug 1521, 'Cannot close compose window after 
		replying to a non-existent news message'

2008-02-13 [colin]	3.3.0cvs12

	* src/folderview.c
		Fix important warnings

2008-02-12 [colin]	3.3.0cvs11

	* src/imap.c
	* src/etpan/imap-thread.c
	* src/etpan/imap-thread.h
		Fix handling of $Forwarded flag on Exchange:
		check for the existence or creatability of a
		flag before using it.

2008-02-12 [colin]	3.3.0cvs10

	* src/matcher.c
		Optimise matching on Found in addressbook if
		the matched header is in cache (From, etc)

2008-02-12 [colin]	3.3.0cvs9

	* src/folderview.c
		Fix crashy stuff when changing displayed
		columns

2008-02-12 [wwp]	3.3.0cvs8

	* src/folder.h
		Remove duplicate func declaration and restore the one
		a missing one.

2008-02-12 [wwp]	3.3.0cvs7

	* src/compose.c
	* src/export.c
	* src/folder.c
	* src/folder.h
	* src/foldersel.c
	* src/foldersel.h
	* src/imap_gtk.c
	* src/import.c
	* src/mainwindow.c
	* src/messageview.c
	* src/mh_gtk.c
	* src/prefs_account.c
	* src/prefs_filtering_action.c
	* src/summaryview.c
	* src/plugins/bogofilter/bogofilter_gtk.c
	* src/plugins/spamassassin/spamassassin_gtk.c
		Allow moving/copying folders to root folders when using
		the folder selection dialog (it was not possible to
		maemo users to reparent a subfolder to a root folder
		at all).

2008-02-12 [fabien]	3.3.0cvs6

	* po/fr.po